[package]
name = "cfa_hud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.3.1"
tokio = "1.21.2"
actix-web = "4"
serde = "1.0.145"
serde_json = "1.0.86"
futures = "0.3.24"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.22"
env_logger = "0.9.1"
